--- a/package.json
+++ b/package.json
@@ -9,27 +9,25 @@
     "test": "bin/test",
     "test-cov": "bin/test-cov",
     "wrap": "npm-shrinkwrap",
-    "update": "police -lt package.json && constable -u"
+    "update": "ncu -a"
   },
   "dependencies": {
-    "@brentlintner/vile": "~0.4.1",
-    "bluebird": "2.9.34",
-    "cjson": "0.3.1",
-    "coffeelint": "1.11.1",
-    "lodash": "3.10.1"
+    "@brentlintner/vile": "^0.5.2",
+    "bluebird": "^3.1.1",
+    "cjson": "0.3.3",
+    "coffeelint": "^1.14.2",
+    "lodash": "^3.10.1"
   },
   "devDependencies": {
-    "chai": "3.2.0",
-    "chai-as-promised": "5.1.0",
-    "coffee-script": "1.9.3",
-    "constable": "0.0.4",
-    "istanbul": "0.3.18",
-    "mimus": "0.1.2",
-    "mocha": "2.2.5",
-    "npm-shrinkwrap": "5.4.0",
-    "police": "0.4.0",
-    "release-it": "^2.3.1",
-    "sinon": "1.16.1",
-    "sinon-chai": "2.8.0"
+    "chai": "~3.4.1",
+    "chai-as-promised": "~5.2.0",
+    "coffee-script": "~1.10.0",
+    "constable": "~0.0.4",
+    "istanbul": "~0.4.2",
+    "mimus": "~0.1.2",
+    "mocha": "~2.3.4",
+    "release-it": "~2.3.1",
+    "sinon": "~1.17.2",
+    "sinon-chai": "~2.8.0"
   }
 }
