--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lodash": "^3.10.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0",
     "chai": "~3.4.1",
     "chai-as-promised": "~5.2.0",
     "coffee-script": "~1.10.0",
@@ -31,7 +33,7 @@
     "istanbul": "~0.4.2",
     "mimus": "~0.1.2",
     "mocha": "~2.3.4",
-    "release-it": "~2.3.1",
+    "release-it": "^2.3.1",
     "sinon": "~1.17.2",
     "sinon-chai": "~2.8.0"
   }
