--- a/package.json
+++ b/package.json
@@ -14,16 +14,33 @@
     "dev": "bin/dev",
     "test": "bin/test",
     "test-cov": "bin/test-cov",
-    "update": "ncu -a"
+    "update": "ncu -a",
+    "vile": "vile -csipd --nodecorations"
   },
   "dependencies": {
-    "@forthright/vile": "^0.5.14",
+    "@forthright/vile": "~0.5.22",
     "bluebird": "^3.3.0",
     "cjson": "0.3.3",
     "coffeelint": "^1.14.2",
     "lodash": "^3.10.1"
   },
   "devDependencies": {
+    "@forthright/vile-coffeelint": "0.1.4",
+    "@forthright/vile-comment": "0.1.5",
+    "@forthright/vile-coverage": "^0.2.1",
+    "@forthright/vile-depcheck": "0.1.1",
+    "@forthright/vile-eclint": "0.1.1",
+    "@forthright/vile-eslint": "0.1.2",
+    "@forthright/vile-fs-lint": "^0.3.1",
+    "@forthright/vile-git": "^0.2.1",
+    "@forthright/vile-jshint": "0.2.2",
+    "@forthright/vile-language": "0.1.3",
+    "@forthright/vile-license": "0.3.2",
+    "@forthright/vile-ncu": "0.1.4",
+    "@forthright/vile-newline": "0.1.2",
+    "@forthright/vile-nsp": "^0.2.2",
+    "@forthright/vile-semver": "0.1.2",
+    "@forthright/vile-whitespace": "0.1.2",
     "babel-cli": "^6.5.1",
     "babel-preset-es2015": "^6.5.0",
     "chai": "~3.5.0",
