--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "bin/test",
     "test-cov": "bin/test-cov",
     "update": "ncu -a",
-    "vile": "vile p -usi --nodecorations"
+    "vile": "vile p -usi --nodecorations",
+    "release-it": "release-it"
   },
   "dependencies": {
     "bluebird": "^3.4.1",
