--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "@forthright/vile": ">=0.11.6",
+    "@forthright/vile": "^0.11.8",
     "@forthright/vile-coffeelint": ">=0.1.14",
     "@forthright/vile-comment": ">=0.1.17",
     "@forthright/vile-coverage": ">=0.2.14",
