--- a/.vile.yml
+++ b/.vile.yml
@@ -1,31 +1,22 @@
 vile:
   ignore:
-    - LICENSE
-    - appveyor.yml
+    - ".*"
+    - bin
     - coverage
-    - coffeelint.json
-    - .babelrc
-    - .build
-    - .npmignore
-    - .travis.yml
+    - doc
+    - "*.json"
+    - LICENSE
+    - "*.lock"
+    - "*.log"
+    - "*.md"
     - node_modules
-    - lib
+    - src/@types
     - tags
-    - .test
-    - .ctags
-    - .git
-    - circle.yml
-    - .editorconfig
-    - .eslintignore
-    - .eslintrc
-    - .gitignore
-    - .npmrc
-    - tags
+    - test/fixtures
+    - test/mocha.opts
     - tmp
-    - "/lib"
     - vendor
-    - README.md
-    - .vile.yml
+    - "*.yml"
 
 depcheck:
   config:
