--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vile-coffeelint",
   "version": "0.1.16",
-  "description": "A vile plugin for CoffeeLint",
+  "description": "Ensure consistent style in your CoffeeScript code.",
   "license": "MPL-2.0",
   "main": "lib/index.js",
   "files": [
